--- a/index.html
+++ b/index.html
@@ -7,9 +7,83 @@
     <meta name="description" content="This is the base style guide for a new CSS framework">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css">
     <link rel="stylesheet" href="style.css">
+	<script src="" type="text/javascript"></script>
 
   </head>
   <body>
-
+	  <header>
+		  <img src="#" class="logo" />
+		  <nav>
+			  <ul>
+			  	<li><a href="#">colors</a></li>
+			  	<li><a href="#">typography</a></li>
+			  	<li><a href="#">buttons</a></li>
+			  	<li><a href="#">forms</a></li>
+			  	<li><a href="#">tables</a></li>
+			  	<li><a href="#">components</a></li>
+			  </ul>
+		  </nav>
+	  </header>
+	  <main>
+		  <article>
+			  <h2>Colors</h2>
+			  <section>
+				  <h3>Primary</h3>
+				  <p class="flat-color">Flat</p>
+				  <p class="light">Light</p>
+				  <p class="medium">Medium</p>
+				  <p class="dark">Dark</p>
+			  </section>
+			  <section>
+				  <h3>Secondary</h3>
+				  <p class="flat-color">Flat</p>
+				  <p class="light">Light</p>
+				  <p class="medium">Medium</p>
+				  <p class="dark">Dark</p>
+			  </section>
+			  <section>
+				  <h3>Accent</h3>
+				  <p class="flat-color">Flat</p>
+				  <p class="light">Light</p>
+				  <p class="medium">Medium</p>
+				  <p class="dark">Dark</p>
+			  </section>
+			  <section>
+				  <h3>Greytones</h3>
+				  <p class="flat-color">Flat</p>
+				  <p class="light">Light</p>
+				  <p class="medium">Medium</p>
+				  <p class="dark">Dark</p>
+			  </section>
+		  </article>
+		  <article>
+			  <h2>Typography</h2>
+			  <article>
+				  <section>
+					  <h3>Headings</h3>
+					  <p class="h1"></p>
+					  <p class="h2"></p>
+					  <p class="h3"></p>
+					  <p class="h4"></p>
+					  <p class="h5"></p>
+					  <p class="h6"></p>
+				  </section>
+				  <section>
+					  <h3>Content</h3>
+					  <p class="body"></p>
+					  <p class="link"></p>
+					  <p class="mark"></p>
+					  <p class="code"></p>
+					  <p class="quote"></p>
+					  <p class="italics"></p>
+					  <p class="bold"></p>
+					  <p class="underline"></p>
+				  </section>
+			  </article>
+		  </article>
+	  </main>
+	  <footer>
+		  <p>copyright Mark Strus &copy;2020</p>
+	  </footer>
   </body>
 </html>
