--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		  <img src="#" class="logo" />
 		  <nav>
 			  <ul>
-			  	<li><a href="#">colors</a></li>
+			  	<li><a href="#colors">colors</a></li>
 			  	<li><a href="#">typography</a></li>
 			  	<li><a href="#">buttons</a></li>
 			  	<li><a href="#">forms</a></li>
@@ -25,31 +25,31 @@
 		  </nav>
 	  </header>
 	  <main>
-		  <article>
+		  <article class="colors" id="colors">
 			  <h2>Colors</h2>
-			  <section>
-				  <h3>Primary</h3>
+			  <section class="color-section primary">
+				  <h3 class="color-heading">Primary</h3>
 				  <p class="flat-color">Flat</p>
 				  <p class="light">Light</p>
 				  <p class="medium">Medium</p>
 				  <p class="dark">Dark</p>
 			  </section>
-			  <section>
-				  <h3>Secondary</h3>
+			  <section class="color-section secondary">
+				  <h3 class="color-heading">Secondary</h3>
 				  <p class="flat-color">Flat</p>
 				  <p class="light">Light</p>
 				  <p class="medium">Medium</p>
 				  <p class="dark">Dark</p>
 			  </section>
-			  <section>
-				  <h3>Accent</h3>
+			  <section class="color-section accent">
+				  <h3 class="color-heading">Accent</h3>
 				  <p class="flat-color">Flat</p>
 				  <p class="light">Light</p>
 				  <p class="medium">Medium</p>
 				  <p class="dark">Dark</p>
 			  </section>
-			  <section>
-				  <h3>Greytones</h3>
+			  <section class="color-section greytones">
+				  <h3 class="color-heading">Greytones</h3>
 				  <p class="flat-color">Flat</p>
 				  <p class="light">Light</p>
 				  <p class="medium">Medium</p>
