--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		  <nav>
 			  <ul>
 			  	<li><a href="#colors">colors</a></li>
-			  	<li><a href="#">typography</a></li>
+			  	<li><a href="#typography">typography</a></li>
 			  	<li><a href="#">buttons</a></li>
 			  	<li><a href="#">forms</a></li>
 			  	<li><a href="#">tables</a></li>
@@ -57,27 +57,27 @@
 			  </section>
 		  </article>
 		  <article>
-			  <h2>Typography</h2>
+			  <h2 id="typography">Typography</h2>
 			  <article>
 				  <section>
 					  <h3>Headings</h3>
-					  <p class="h1"></p>
-					  <p class="h2"></p>
-					  <p class="h3"></p>
-					  <p class="h4"></p>
-					  <p class="h5"></p>
-					  <p class="h6"></p>
+					  <p class="h1">Lorem Ipsum</p>
+					  <p class="h2">Lorem Ipsum</p>
+					  <p class="h3">Lorem Ipsum</p>
+					  <p class="h4">Lorem Ipsum</p>
+					  <p class="h5">Lorem Ipsum</p>
+					  <p class="h6">Lorem Ipsum</p>
 				  </section>
 				  <section>
 					  <h3>Content</h3>
-					  <p class="body"></p>
-					  <p class="link"></p>
-					  <p class="mark"></p>
-					  <p class="code"></p>
-					  <p class="quote"></p>
-					  <p class="italics"></p>
-					  <p class="bold"></p>
-					  <p class="underline"></p>
+					  <p class="body">Lorem Ipsum</p>
+					  <p class="link">Lorem Ipsum</p>
+					  <p class="mark">Lorem Ipsum</p>
+					  <p class="code">Lorem Ipsum</p>
+					  <p class="quote">Lorem Ipsum</p>
+					  <p class="italics">Lorem Ipsum</p>
+					  <p class="bold">Lorem Ipsum</p>
+					  <p class="underline">Lorem Ipsum</p>
 				  </section>
 			  </article>
 		  </article>
