--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			  <ul>
 			  	<li><a href="#colors">colors</a></li>
 			  	<li><a href="#typography">typography</a></li>
-			  	<li><a href="#">buttons</a></li>
-			  	<li><a href="#">forms</a></li>
-			  	<li><a href="#">tables</a></li>
-			  	<li><a href="#">components</a></li>
+			  	<li><a href="#buttons">buttons</a></li>
+			  	<li><a href="#forms">forms</a></li>
+			  	<li><a href="#tables">tables</a></li>
+			  	<li><a href="#components">components</a></li>
 			  </ul>
 		  </nav>
 	  </header>
